--- a/Gura Gura Ground/Gura Gura Ground.vcxproj.filters
+++ b/Gura Gura Ground/Gura Gura Ground.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClCompile Include="Src\MySrc\state.cpp">
       <Filter>%28分類済み%29\【エンティティ系統】</Filter>
     </ClCompile>
+    <ClCompile Include="Src\MySrc\IronBall.cpp">
+      <Filter>%28分類済み%29\【エンティティ系統】</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\MySrc\main.h">
@@ -237,6 +240,9 @@
       <Filter>%28公開API%29</Filter>
     </ClInclude>
     <ClInclude Include="Src\MySrc\state.h">
+      <Filter>%28分類済み%29\【エンティティ系統】</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MySrc\IronBall.h">
       <Filter>%28分類済み%29\【エンティティ系統】</Filter>
     </ClInclude>
   </ItemGroup>
