--- a/Gura Gura Ground/Gura Gura Ground.vcxproj.filters
+++ b/Gura Gura Ground/Gura Gura Ground.vcxproj.filters
@@ -111,6 +111,12 @@
     <ClCompile Include="Src\MySrc\IronBall.cpp">
       <Filter>%28分類済み%29\【エンティティ系統】</Filter>
     </ClCompile>
+    <ClCompile Include="Src\MySrc\gimmick.manager.cpp">
+      <Filter>%28分類済み%29\【マネージャー系統】</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\MySrc\gimmickdata.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\MySrc\main.h">
@@ -244,6 +250,12 @@
     </ClInclude>
     <ClInclude Include="Src\MySrc\IronBall.h">
       <Filter>%28分類済み%29\【エンティティ系統】</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MySrc\gimmick.manager.h">
+      <Filter>%28分類済み%29\【マネージャー系統】</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MySrc\gimmickdata.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
