--- a/Gura Gura Ground/Gura Gura Ground.vcxproj.filters
+++ b/Gura Gura Ground/Gura Gura Ground.vcxproj.filters
@@ -43,6 +43,18 @@
     <Filter Include="%28公開API%29">
       <UniqueIdentifier>{b026c020-6cde-42a9-82a8-0b21a2436013}</UniqueIdentifier>
     </Filter>
+    <Filter Include="%28公開API%29\【エンティティ系統】">
+      <UniqueIdentifier>{2b89d9fe-a590-4eb6-bbc1-333deca63a3f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="%28公開API%29\【ジオメトリ系統】">
+      <UniqueIdentifier>{ad73a0b1-a74c-4136-bc12-91eca9b03337}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="%28公開API%29\【マネージャー系統】">
+      <UniqueIdentifier>{4957e2af-472e-4b5b-8468-1d5b9db339a2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="%28公開API%29\【その他】">
+      <UniqueIdentifier>{56093ec2-78d8-4b90-b0bd-7c2c4da9f870}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\MySrc\main.cpp">
@@ -161,66 +173,6 @@
     <ClInclude Include="Src\MySrc\beamlight.h">
       <Filter>%28分類済み%29\【エンティティ系統】</Filter>
     </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.world.h">
-      <Filter>%28公開API%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.window.h">
-      <Filter>%28公開API%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.vertexshader.manager.h">
-      <Filter>%28公開API%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.useful.h">
-      <Filter>%28公開API%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.singleton.h">
-      <Filter>%28公開API%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.renderer.h">
-      <Filter>%28公開API%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.registry.h">
-      <Filter>%28公開API%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.rect.2D.h">
-      <Filter>%28公開API%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.pixelshader.manager.h">
-      <Filter>%28公開API%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.object.manager.h">
-      <Filter>%28公開API%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.object.h">
-      <Filter>%28公開API%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.model.gltf.h">
-      <Filter>%28公開API%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.manager.h">
-      <Filter>%28公開API%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.input.manager.h">
-      <Filter>%28公開API%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.inputlayout.manager.h">
-      <Filter>%28公開API%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.hud.h">
-      <Filter>%28公開API%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.gltf.manager.h">
-      <Filter>%28公開API%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.fullscreen.2D.h">
-      <Filter>%28公開API%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.constantbuffer.manager.h">
-      <Filter>%28公開API%29</Filter>
-    </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.camera.h">
-      <Filter>%28公開API%29</Filter>
-    </ClInclude>
     <ClInclude Include="Src\MySrc\state.h">
       <Filter>%28分類済み%29\【エンティティ系統】</Filter>
     </ClInclude>
@@ -230,49 +182,109 @@
     <ClInclude Include="Src\MySrc\gimmick.manager.h">
       <Filter>%28分類済み%29\【マネージャー系統】</Filter>
     </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.texture.manager.h">
-      <Filter>%28公開API%29</Filter>
+    <ClInclude Include="Src\MyAPI\API.constantbuffer.manager.h">
+      <Filter>%28公開API%29\【マネージャー系統】</Filter>
     </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.sound.manager.h">
-      <Filter>%28公開API%29</Filter>
+    <ClInclude Include="Src\MyAPI\API.gltf.manager.h">
+      <Filter>%28公開API%29\【マネージャー系統】</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MyAPI\API.input.manager.h">
+      <Filter>%28公開API%29\【マネージャー系統】</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MyAPI\API.inputlayout.manager.h">
+      <Filter>%28公開API%29\【マネージャー系統】</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MyAPI\API.object.manager.h">
+      <Filter>%28公開API%29\【マネージャー系統】</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MyAPI\API.pixelshader.manager.h">
+      <Filter>%28公開API%29\【マネージャー系統】</Filter>
     </ClInclude>
     <ClInclude Include="Src\MyAPI\API.scene.manager.h">
-      <Filter>%28公開API%29</Filter>
+      <Filter>%28公開API%29\【マネージャー系統】</Filter>
     </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.scene.h">
-      <Filter>%28公開API%29</Filter>
+    <ClInclude Include="Src\MyAPI\API.world.h">
+      <Filter>%28公開API%29\【マネージャー系統】</Filter>
     </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.rigidbody.h">
-      <Filter>%28公開API%29</Filter>
+    <ClInclude Include="Src\MyAPI\API.window.h">
+      <Filter>%28公開API%29\【マネージャー系統】</Filter>
     </ClInclude>
-    <ClInclude Include="Src\MyAPI\API.ghost.h">
-      <Filter>%28公開API%29</Filter>
+    <ClInclude Include="Src\MyAPI\API.vertexshader.manager.h">
+      <Filter>%28公開API%29\【マネージャー系統】</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MyAPI\API.texture.manager.h">
+      <Filter>%28公開API%29\【マネージャー系統】</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MyAPI\API.sound.manager.h">
+      <Filter>%28公開API%29\【マネージャー系統】</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MyAPI\API.fullscreen.2D.h">
+      <Filter>%28公開API%29\【ジオメトリ系統】</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MyAPI\API.hud.h">
+      <Filter>%28公開API%29\【ジオメトリ系統】</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MyAPI\API.model.gltf.h">
+      <Filter>%28公開API%29\【ジオメトリ系統】</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MyAPI\API.rect.2D.h">
+      <Filter>%28公開API%29\【ジオメトリ系統】</Filter>
     </ClInclude>
     <ClInclude Include="Src\MyAPI\API.collider.h">
-      <Filter>%28公開API%29</Filter>
+      <Filter>%28公開API%29\【エンティティ系統】</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MyAPI\API.rigidbody.h">
+      <Filter>%28公開API%29\【エンティティ系統】</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MyAPI\API.ghost.h">
+      <Filter>%28公開API%29\【エンティティ系統】</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MyAPI\API.object.h">
+      <Filter>%28公開API%29\【ジオメトリ系統】</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MyAPI\API.scene.h">
+      <Filter>%28公開API%29\【マネージャー系統】</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MyAPI\API.renderer.h">
+      <Filter>%28公開API%29\【マネージャー系統】</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MyAPI\API.useful.h">
+      <Filter>%28公開API%29\【その他】</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MyAPI\API.singleton.h">
+      <Filter>%28公開API%29\【その他】</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MyAPI\API.registry.h">
+      <Filter>%28公開API%29\【その他】</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MyAPI\API.manager.h">
+      <Filter>%28公開API%29\【その他】</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\MyAPI\API.camera.h">
+      <Filter>%28公開API%29\【その他】</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Src\MyAPI\API.window.tpp">
-      <Filter>%28公開API%29</Filter>
-    </None>
-    <None Include="Src\MyAPI\API.useful.tpp">
-      <Filter>%28公開API%29</Filter>
-    </None>
-    <None Include="Src\MyAPI\API.singleton.tpp">
-      <Filter>%28公開API%29</Filter>
-    </None>
-    <None Include="Src\MyAPI\API.registry.tpp">
-      <Filter>%28公開API%29</Filter>
-    </None>
-    <None Include="Src\MyAPI\API.object.tpp">
-      <Filter>%28公開API%29</Filter>
-    </None>
     <None Include="Src\MyAPI\API.constantbuffer.manager.tpp">
-      <Filter>%28公開API%29</Filter>
+      <Filter>%28公開API%29\【マネージャー系統】</Filter>
     </None>
     <None Include="Src\MyAPI\API.scene.manager.tpp">
-      <Filter>%28公開API%29</Filter>
+      <Filter>%28公開API%29\【マネージャー系統】</Filter>
+    </None>
+    <None Include="Src\MyAPI\API.window.tpp">
+      <Filter>%28公開API%29\【マネージャー系統】</Filter>
+    </None>
+    <None Include="Src\MyAPI\API.object.tpp">
+      <Filter>%28公開API%29\【ジオメトリ系統】</Filter>
+    </None>
+    <None Include="Src\MyAPI\API.useful.tpp">
+      <Filter>%28公開API%29\【その他】</Filter>
+    </None>
+    <None Include="Src\MyAPI\API.singleton.tpp">
+      <Filter>%28公開API%29\【その他】</Filter>
+    </None>
+    <None Include="Src\MyAPI\API.registry.tpp">
+      <Filter>%28公開API%29\【その他】</Filter>
     </None>
   </ItemGroup>
 </Project>
